2010-10-06  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #15461: RemoveXSS exposes XSS vulnerability for double encoded characters (thanks to Marcus Krause)
	* Follow-up to bug #15461: Added unit tests (thanks to Marcus Krause)
	* Fixed bug #15887: XSS in template analyzer (thanks to Georg Ringer)
	* Fixed bug #15728: Extension Manager allows to download arbitrary files beyond PATH_site or rootpath (thanks to Marcus Krause)
	* Fixed bug #15729: Sysext setup's user simulation is susceptible to XSS (thanks to Marcus Krause)
	* Fixed bug #15860: Mitigate libpcre recursion crash in email address validation (thanks to Marcus Krause)
	* Fixed bug #15733: Admin Panel is susceptible to XSS (thanks to Helmut Hummel)
	* Fixed bug #15898: It is (still) possible to download arbitrary files through the jumpurl feature (thanks to Helmut Hummel and Marcus Krause)

2010-10-05  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15874: Provide unit tests for t3lib_div::dirname (Thanks to Oliver Klee)

2010-10-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to bug #15858: htlmArea RTE: Stylesheet access error in Google Chrome 7
	* Fixed bug #15899: htmlArea RTE: Editing area collapsed in Chrome 7

2010-10-03  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #15884: htmlArea RTE: Remove class Ext.ux.StatusBar
	* Added feature #15885: htmlArea RTE: Add option to remove typographical punctuation (Thanks to Daniel Schwarzloh)

2010-10-02  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #15879: htmlArea RTE: Use TYPO3 ExtJS API for RTE notification dialogues
	* Fixed bug #15880: htmlArea RTE: Context menu not working in TYPO3 4.4.3 and 4.5-dev

2010-09-30  Francois Suter  <francois@typo3.org>

	* Fixed bug #15639: Scheduler: Add missing classes and interface to autoload registry (Thanks to Marcus Krause)
	* Fixed bug #14997: Performance: t3lib_db->escapeStrForLike() is using preg_replace, which is not necessary (Thanks to Caspar Stuebs and Marcus Krause)